// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"ButtonLink" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <a
    className="css-kjqv3l-ButtonLink"
  >
    ButtonLink
  </a>
</div>
`;

exports[`"ButtonLink" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <a
    className="css-kjqv3l-ButtonLink"
  >
    Submit
  </a>
</div>
`;

exports[`"ButtonLink" renders in loading state 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <a
    className="css-kjqv3l-ButtonLink"
  >
    <svg
      fill="none"
      height={30}
      strokeWidth="3"
      style={
        {
          "display": "flex",
          "margin": "auto",
        }
      }
      viewBox="0 0 43 43"
      width={30}
    >
      <circle
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="rgba(255, 255, 255, 0.07999999999999996)"
      />
      <circle
        className="css-1ov5q7j-Loading"
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="#fff"
        strokeDasharray={125.68}
        strokeLinecap="round"
      />
    </svg>
  </a>
</div>
`;
